<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/back"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF3C628A"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/background_light" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pro"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.27999997">

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pic"
        android:onClick="bnt_photo"
        app:layout_constraintBottom_toTopOf="@+id/ed_name"
        app:layout_constraintLeft_toLeftOf="@id/relativeLayout"
        app:layout_constraintRight_toRightOf="@id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/button2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/b"
        android:onClick="bnt_photo"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintLeft_toLeftOf="@id/imageButton3"

        app:layout_constraintRight_toRightOf="@id/imageButton3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="20dp"
        android:text="@string/Name"
        android:textColor="#FF3F51B5"

        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:text="@string/Passwowd"


        android:textColor="#FF3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"

        android:text="@string/Email"
        android:textColor="#FF3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

   <!-- <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="20dp"
        android:text="@string/Position"

        android:textColor="#FF3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:background="@drawable/borderprofil1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ed_bio"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ed_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/ed_name"
        android:layout_below="@+id/ed_name"
        android:background="@drawable/borderprofil1"
        android:ems="10"

        android:inputType="textMultiLine|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ed_mail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_weight="1"
        android:background="@drawable/borderprofil1"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_bio"
        tools:ignore="LabelFor" />

    <!--<EditText
        android:id="@+id/ed_mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/ed_bio"
        android:layout_below="@+id/ed_bio"
        android:background="@drawable/borderprofil1"
        android:ems="10"
        android:inputType="text|number"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail"
        tools:ignore="LabelFor" />-->

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:onClick="save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>
